fixed z-index for my-list

--- a/css/main.css
+++ b/css/main.css
@@ -65,7 +65,7 @@ ul.nav.nav-pills.pull-right.text-uppercase.header-nav {
   right: 0;
   background-color: #727878;
   width: 6rem;
-  z-index: 1; }
+  z-index: 10; }
   .my-list.my-list .arrow {
     position: absolute;
     top: -30px;
