--- a/css/my-list.scss
+++ b/css/my-list.scss
@@ -5,7 +5,7 @@
     right: 0;
     background-color: #727878;
     width: 6rem;
-    z-index: 1;
+    z-index: 10;
     .arrow{
         position: absolute;
         top: -30px;
